# LVGL_PREF_AGENT

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.kiro/specs/embedded-device-agent/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
config/: config.example.yaml
src/embedded_device_agent/: __init__.py  router.py
src/embedded_device_agent/api/: __init__.py  app.py  dto.py
src/embedded_device_agent/capabilities/: __init__.py  base.py  factory.py
src/embedded_device_agent/capabilities/functional_test/: __init__.py  capability.py  graph.py  models.py
src/embedded_device_agent/capabilities/perf_tuning/: __init__.py  capability.py  graph.py  orchestrator.py  state.py
src/embedded_device_agent/capabilities/perf_tuning/agents/: __init__.py  analyzer.py  collector.py  instrumentor.py  optimizer.py
src/embedded_device_agent/core/: __init__.py  models.py  services.py
src/embedded_device_agent/core/config/: __init__.py  loader.py  models.py
src/embedded_device_agent/core/device/: __init__.py  base.py  factory.py  models.py
src/embedded_device_agent/core/llm/: __init__.py  base.py  factory.py
src/embedded_device_agent/core/memory/: __init__.py  base.py  factory.py
tests/fixtures/: __init__.py  recorded_capture.systrace
tests/harness/: __init__.py  fakes.py
tests/integration/: test_api_boundary.py  test_core_services_assembly.py  test_log_pipeline.py
tests/system/: test_closed_loop_system.py
tests/unit/: test_analyzer.py  test_collector.py  test_config_loader.py  test_config_models.py  test_device_factory.py  test_frame_analyzer.py  test_functional_test_capability.py  test_half_auto_device.py  test_harness.py  test_harness_substitution.py  test_instrumentor.py  test_llm_factory.py  test_llm_providers.py  test_local_store_retriever.py  test_memory_factory.py  test_models.py  test_models_property.py  test_optimizer.py  test_orchestrator.py  test_platform.py  test_serial_device_io.py  test_smoke.py  test_systrace_parser.py  test_trace_filter.py  test_trace_query.py  test_tuning_graph.py
(+15 files in other folders)
