[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-device-agent"
version = "0.1.0"
description = "嵌入式设备智能体平台：共享底座 + 可插拔能力（LVGL 性能调优 / 自动化测试）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# 运行时依赖。版本与 requirements.txt 对齐（pin 到 .venv 实际解析结果）。
dependencies = [
    # 编排与 LLM
    "langgraph==1.2.8",
    "langchain-core==1.4.8",
    "langchain-anthropic==1.4.8",
    "langchain-openai==1.3.3",
    # 数据契约与配置
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyyaml==6.0.3",
    # 设备 / 串口
    "pyserial==3.5",
    # API 边界
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "hypothesis==6.156.2",
    "mypy==2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest 基础配置
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# mypy 基础配置
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["embedded_device_agent"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["serial.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
